k8s/test-badpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-conflict
  namespace: tools-prod
  labels:
    app: pod-with-conflict
spec:
  restartPolicy: OnFailure
  securityContext:
    runAsNonRoot: true
    runAsUser: 0
  containers:
    - name: busybox
      image: busybox
      command: ["sh", "-c", "echo I am running as user $(id -u)"]
