k8s/prod-admit-service.yml
apiVersion: v1
kind: Service
metadata:
  name: admit
  namespace: tools-prod
spec:
  selector:
    svc: admit
  ports:
    - port: 443
      targetPort: admit-port
