k8s/admit-ing-ext-mwhc.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: admit-ing-ext
  namespace: tools-dev
webhooks:
  - name: admit-ing-ext.tools-dev.svc
    clientConfig:
      service:
        name: admit
        namespace: tools-dev
        path: "/admit-ing-ext"
      caBundle: redacted
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["extensions"]
        apiVersions: ["v1beta1"]
        resources: ["ingresses"]
        scope: "Namespaced"
