k8s/admit-ing-net-mwhc.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: admit-ing-net
  namespace: tools-dev
webhooks:
  - name: admit-ing-net.tools-dev.svc
    clientConfig:
      service:
        name: admit
        namespace: tools-dev
        path: "/admit-ing-net"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN3akNDQWFxZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFTTVJBd0RnWURWUVFERXdkcmRXSmwKTFdOaE1CNFhEVEU1TURFeE1EQTNNek0xTWxvWERUSTVNREV3TnpBM016TTFNbG93RWpFUU1BNEdBMVVFQXhNSAphM1ZpWlMxallUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUtJS2R0dTM5Q1F5CkpJcDZ4UDhMNGw2S1MxTVF4VTB1Q2FaeXlsS2Y4bkpmQnh4MXAwdmhEWVV2andPanFMSzA0MjdIUTA5a0p3MW8Kei9xakNXMU8wV3B4TTBPYWtUUTN2WFdzM2c0dVZUL3NIelpiSjREZnMxdTdBRGdpRE8rRER3bzBFQlJ0SEdaUApBN2FuTVh1L2Nn [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["networking.k8s.io"]
        apiVersions: ["v1beta1"]
        resources: ["ingresses"]
        scope: "Namespaced"
