k8s/admit-pod-mwhc.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: admit-pod
  namespace: tools-dev
webhooks:
  - name: admit-pod.tools-dev.svc
    clientConfig:
      service:
        name: admit
        namespace: tools-dev
        path: "/admit-pod"
      caBundle: redacted
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: "Namespaced"
