k8s/prod-admit-deploy-mwhc.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: admit-deploy
  namespace: tools-prod
webhooks:
  - name: admit-deploy.tools-prod.svc
    clientConfig:
      service:
        name: admit
        namespace: tools-prod
        path: "/admit-deploy"
      caBundle: redact cert
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments"]
        scope: "Namespaced"
