k8s/prod-admit-pod-mwhc.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: admit-pod
  namespace: tools-prod
webhooks:
  - name: admit-pod.tools-prod.svc
    clientConfig:
      service:
        name: admit
        namespace: tools-prod
        path: "/admit-pod"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN3akNDQWFxZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFTTVJBd0RnWURWUVFERXdkcmRXSmwKTFdOaE1CNFhEVEU1TURnek1EQXlNamd4TWxvWERUSTVNRGd5TnpBeU1qZ3hNbG93RWpFUU1BNEdBMVVFQXhNSAphM1ZpWlMxallUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUwvenArTk04RHJTCmg2L0lUVFlFS2F1RWJyemU5MlJPTEhCTFVNdTE5eDdna1JRanBxUkJRMXl4UmU3amdnUVF6Wmp4OW1haEw2QXoKbFdoMWd4WXBMTGI2VlZMUjN4dUN5a2QwYllKeGd2K2F6Q3FLRVlnOWFlc0JsZnZiN1VMME5KdTNUL3dtaEYvSAo5WStRdzYyRHl0 [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: "Namespaced"
