k8s/prod-admit-svc-mwhc.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: admit-svc
  namespace: tools-prod
webhooks:
  - name: admit-pod.tools-prod.svc
    clientConfig:
      service:
        name: admit
        namespace: tools-prod
        path: "/admit-svc"
      caBundle: redacted
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["services"]
        scope: "Namespaced"
